# serine

./: README.md
py/: pyproject.toml  tox.ini
py/requirements/: dev.in  dev.txt  tests.txt  typing.txt
py/src/serine/: __init__.py  css.py
py/tests/: test_css.py
