[project]
name = "serine"
version = "0.1.0"
description = "Serine CSS pre-processor language"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Brayden Regis", email="brayden.regis@gmail.com" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://ctcl.lgbt/projects/serine/"
Issues = "https://github.com/ctcl-bregis/serine/issues"

